# polymarket-arb

./: .gitignore  Cargo.toml
data/: btc_5m_latest.json  btc_updown_5m_candles.csv  btc_updown_5m_latest.json
src/: main.rs
